Refactor: Docker instructions added Readme.md file

--- a/.env-sample
+++ b/.env-sample
@@ -25,3 +25,6 @@ EMAIL_HOST_USER=email_user_host
 EMAIL_PORT=587
 DEFAULT_FROM_EMAIL=EMAIL_HOST_USER
 FROM_EMAIL=email@email.com
+
+# Cart session
+CART_SESSION_ID='cart'
